Wed Jan 14 16:27:10 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: ...except version 0.12 was already released.
	Releasing lucky version 0.13.

Wed Jan 14 16:23:22 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: Released version 0.12.

	* Makefile.am: Make pass distcheck.

	* freedesktop.or.xml.in: Update DTD to deal with xml:lang

Tue Jan 13 16:32:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* po/no.po: new translation

	* po/fr.po: Noticed it was in ISO8559-1.  Converted to UTF-8.

Mon Jan 12 13:39:45 2004  Jonathan Blandford  <jrb@gnome.org>

	* po/fi.po: new translation

	* po/fr.po: new translation

	* po/nn.po: new translation

Mon Jan 12 15:49:55 2004  Thomas Leonard <tal00r@ecs.soton.ac.uk>

	* freedesktop.org.xml.in: Updated DjVu entry (patch from
	  Stéphane Loeuillet).

Tue Dec 16 01:57:24 2003  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am: comment out the UTF-8 changes.  We don't build all
	that often as we keep the generated file in CVS, and most people
	won't build it.

	* autogen.sh: add an autogen.sh file, and clean up the build
	setup.

Tue Nov 18 10:12:38 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GETTEXT_PACKAGE): add sv.po

Mon Nov 17 10:44:28 2003  Jonathan Blandford  <jrb@redhat.com>

	* po/nl.po: updated translation.

Thu Nov 13 17:47:52 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GETTEXT_PACKAGE): add nl.po

	* po/nl.po: new translation.

Wed Nov 12 14:00:13 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: add hu.po and sv.po.  We're now building in
	translations.

Fri Nov  7 16:42:24 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: moved to intltool.  We now build translations from
	pot files.