@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(freedesktop.org.xml.in)
-AM_INIT_AUTOMAKE(shared-mime-info, 0.13)
+AM_INIT_AUTOMAKE(shared-mime-info, 0.13.1)
 
 AC_PROG_INTLTOOL
 
